# teleman

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.dev.md  README.md  pyproject.toml
.claude/rules/: code-quality.md
.claude/skills/analysis/: SKILL.md
.claude/skills/profile/: SKILL.md
.claude/skills/teleman/: SKILL.md
analysis/: __init__.py  __main__.py  extract_user.py  loader.py  registry.py  stats_activity.py  stats_media.py  stats_overview.py  stats_tokens.py  stats_users.py
docs/: vision.md
docs/specs/: chat-checkpoints.md
teleman/: __main__.py  cli.py  client.py  commands.py  config.py  contacts.py  links.py  messages.py  models.py  privacy.py  proxy.py  report.py  responses.py  sessions.py  settings.py
teleman/export/: exporter.py  models.py  resolver.py  storage.py  sync.py
tests/: test_export_models.py  test_export_storage.py  test_messages.py  test_models.py  test_proxy.py  test_sessions.py  test_settings.py
